# libspelling

./: .gitlab-ci.yml  NEWS  README.md  meson.build  meson_options.txt
docs/: Spelling.toml.in
lib/: cjhtextregionprivate.h  egg-action-group.h  libspelling.h  meson.build  spelling-checker-private.h  spelling-checker.c  spelling-checker.h  spelling-cursor.c  spelling-dictionary-internal.h  spelling-dictionary.c  spelling-dictionary.h  spelling-empty-provider.c  spelling-engine-private.h  spelling-engine.c  spelling-init.c  spelling-job-private.h  spelling-job.c  spelling-language-info-private.h  spelling-language-info.c  spelling-language-info.h  spelling-language-internal.h  spelling-language.c  spelling-language.h  spelling-menu.c  spelling-menu.h  spelling-provider-internal.h  spelling-provider.c  spelling-provider.h  spelling-text-buffer-adapter.c  spelling-text-buffer-adapter.h  spelling-trace.h  spelling-types.h
lib/enchant/: meson.build  spelling-enchant-dictionary.c  spelling-enchant-language.c  spelling-enchant-language.h  spelling-enchant-provider.c
po/: LINGUAS  bg.po  de_CH.po  kab.po  kw.po  lo.po  meson.build  nb.po  ro.po
test/: meson.build  test-spelling.c
testsuite/: meson.build  test-cursor.c  test-engine.c  test-job.c  test-region.c
